--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <!-- Use title if it's in the page YAML frontmatter -->
     <!-- <title>Crest&trade; by VMware&reg;</title> -->
-    <title>Crest</title>
-    <link href='favicon.png' rel='shortcut icon'>
-    <link href='favicon.ico' rel='icon' type='image/ico'>
+    <title>Crest - An Automated Accessibility Testing Tool</title>
+    <!-- <link href='favicon.png' rel='shortcut icon'>
+    <link href='favicon.ico' rel='icon' type='image/ico'> -->
     <link href="assets/css/all.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
@@ -18,6 +18,7 @@
     <header>
       <div class='peelback'></div>
       <div class='container' style="justify-content: flex-end; display: flex;">
+        <div id="skip"><a href="#maincontent">Skip to Main Content</a></div>
         <div class='row' style="width: 50%;">
           <!-- <div > -->
             <!-- class='brand-container' -->
@@ -41,12 +42,12 @@
                 <div class='row'>
                   <!-- <a href="#what-is-crest">What is Crest</a> -->
                   <!-- <a href="#getting-crest">Getting Crest</a> -->
-                  <a href="#currently-supports">Currently Supports</a>
-                  <a href="#started">Getting Started</a>
-                  <a href="#support">Support</a>
-                  <a href="#contributors">Contributors</a>
-                  <a href="#contributing">Contributing</a>
-                  <a href="#license">License</a>
+                  <a alt="link to currently supports section" href="#currently-supports">Currently Supports</a>
+                  <a alt="link to getting started section" href="#started">Getting Started</a>
+                  <a alt="link to support section" href="#support">Support</a>
+                  <a alt="link to contributors section" href="#contributors">Contributors</a>
+                  <a alt="link to contributing section" href="#contributing">Contributing</a>
+                  <a alt="link to license section" href="#license">License</a>
                 </div>
               </div>
             </div>
@@ -58,19 +59,20 @@
     <section class='crest-def'>
       <div class='container'>
         <div class="row">
-          <div class="col-sm-6" style="margin: auto;">
-            <h2 id="vmware-crest" style="font-size: 40px;">Crest</h2>
-
+          <div class="col-sm-6" style="margin: auto; text-align: center;">
+            <!-- <h2 id="vmware-crest" style="font-size: 40px;">Crest</h2> -->
+            <main id="maincontent"></main>
+            <h1><img alt="Crest Logo" src="assets/img/crest_logo.png" /></h1>
             <p style="font-size: 20px;">Automated Accessibility Testing Tool</p>
             <p style="font-size: 13px;">Crest quickly tests any HTML web page for a simple way to solve your accessibility testing problems. Provide a website URL to our callable API and expose potential WCAG violations.</p>
-            <a class="button button-primary button-large" href="https://gitlab.eng.vmware.com/xlabs/x43_accessibility-"><i class='ion-social-github'></i>
+            <a class="button button-primary button-large" alt="Crest GitHub repo" href="https://github.com/vmware/crest/"><i class='ion-social-github'></i>
             Fork
             Crest
             <i class='ion-ios-arrow-right'></i>
             </a>
           </div>
           <div class="col-sm-6">
-            <img alt="Image" src="assets/img/crest_main_page.png" />
+            <img alt="Crest Landing Page Display Image" src="assets/img/crest_main_page.png" />
           </div>
       </div>
       </div>
@@ -81,13 +83,14 @@
           <div class="content">
             <h2 id="currently-supports">Currently Supports</h2>&nbsp;
             <p>
-              <a title="Keyboard Focus Indicator" href="" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="Amit Garg" src="assets/img/kfi.png" /><span>Keyboard Focus Indicator</span>
+              <a alt="Keyboard Focus Indicator API reference page" title="Keyboard Focus Indicator" href="" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="" src="assets/img/Focus_indicator.png" /><span>Keyboard Focus Indicator</span>
               </a>
-              <a title="Closed Captioning and Transcript" href="" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="Sheri Byrne Haber" src="assets/img/kfi.png" /><span>Closed Captioning and Transcript</span>
+              <a alt="Closed Captioning and Transcript API reference page" title="Closed Captioning and Transcript" href="" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="" src="assets/img/cc-transcript.png" /><span>Closed Captioning and Transcript</span>
               </a>
-              <a title="Heading Analysis" href="" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="Joyce Oshita" src="assets/img/kfi.png" /><span>Heading Analysis</span>
+              <a alt="Heading Analysis API reference page" title="Heading Analysis" href="" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="" src="assets/img/heading-analysis.png" /><span>Heading Analysis</span>
               </a>
             </p>
+            <p style="font-size: 13px; text-align: center;"><span style="color: black; font-weight: bold;">Note:</span> The API reference documentation link will be enabled soon.</p>
       </div>
       </div>
     </div>
@@ -97,7 +100,7 @@
       <div class='row'>
         <div class="content">
           <h2 id="started">Getting Started</h2>&nbsp;
-          <p style="font-size: 13px;">Getting started with Crest in 5 minutes by following the instructions provided on the <a href="">API reference page</a>.</p>
+          <p style="font-size: 13px;">Getting started with Crest in 5 minutes by following the instructions provided in the <a alt="Link to getting started section of ReadMe file" href="https://github.com/vmware/crest#getting-started">Readme File</a>.</p>
         </div>
       </div>
     </div>
@@ -110,8 +113,8 @@
 
             <p>Crest is released as open source software and comes with no commercial support.</p>
             <p>But since we want to ensure success and recognize that Crest consumers might fall into a range of roles - from developers that are steeped in the conventions of open-source to customers that are more accustomed to VMware commercial offerings, we offer several methods of engaging with the Crest team and community.</p>
-            <p>For our developer community, feel free to join our Slack channel at <a href="" target="_blank">TBD</a></p>
-            <p>For more general user questions, visit the Crest user forum in our <a href="" target="_blank">Crest VMware Community(TBD)</a>.</p>
+            <p>For the Crest community, feel free to join our <a alt= "Link to join crest slack channel" href="https://join.slack.com/t/crest-axz6070/shared_invite/zt-q4qom3p2-7FqwoIg2yffUzlpEE7_bcA" target="_blank">Slack channel </a></p>
+            <!-- <p>For more general user questions, visit the Crest user forum in our <a href="" target="_blank">Crest VMware Community(TBD)</a>.</p> -->
 
           </div>
         </div>
@@ -123,11 +126,11 @@
           <div class='content'>
             <h2 id='contributors'>Contributors</h2>&nbsp;
             <p>
-              <a title="Amit Garg" href=""><img alt="Amit Garg" src="https://avatars.githubusercontent.com/u/82112579?v=4" />
+              <a alt="Sheri Byrne Haber's Github profile" title="Sheri Byrne Haber" href="https://github.com/sheribyrne"><img alt="Sheri Byrne Haber" src="https://avatars.githubusercontent.com/u/47125418?v=4" />
               </a>
-              <a title="Sheri Byrne Haber" href=""><img alt="Sheri Byrne Haber" src="https://avatars.githubusercontent.com/u/82112579?v=4" />
+              <a alt="Amit Garg's Github profile" title="Amit Garg" href="https://github.com/gargam17"><img alt="Amit Garg" src="https://avatars.githubusercontent.com/u/82112579?v=4" />
               </a>
-              <a title="Joyce Oshita" href=""><img alt="Joyce Oshita" src="https://avatars.githubusercontent.com/u/82112579?v=4" />
+              <a alt="Joyce Oshita's Github profile" title="Joyce Oshita" href="https://github.com/ojoyce"><img alt="Joyce Oshita" src="https://avatars.githubusercontent.com/u/57046849?v=4" />
               </a>
             </p>
           </div>
@@ -139,7 +142,7 @@
         <div class='row'>
           <div class='content' style="font-size: 13px;">
             <h2 id="contributing">Contributing</h2>&nbsp;
-            <p>The Crest project team welcomes contributions from the community. If you wish to contribute code, please look at our <a title="Amit Garg" href="https://gitlab.eng.vmware.com/xlabs/x43_accessibility-/-/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a> file.</p>
+            <p>The Crest project team welcomes contributions from the community. If you wish to contribute code, please look at our <a alt="link to contrinution markdown file" title="Contribution" href="https://github.com/vmware/crest/blob/main/CONTRIBUTING.md">CONTRIBUTING.md</a> file.</p>
           </div>
         </div>
       </div>
@@ -150,7 +153,7 @@
           <div class='content'>
             <h2 id="license">License</h2>&nbsp;
 
-            <p>Crest is comprised of many open source software components, each of which has its own license that is located in the source code of the respective component as well as documented in the <a href="https://gitlab.eng.vmware.com/xlabs/x43_accessibility-/-/blob/master/LICENSE">open source license file</a> accompanying the Crest distribution.</p>
+            <p>Crest is comprised of many open source software components, each of which has its own license that is located in the source code of the respective component as well as documented in the <a alt="link to license file" href="https://github.com/vmware/crest/blob/main/LICENSE">open source license file</a> accompanying the Crest distribution.</p>
           </div>
           <div class='image'></div>
         </div>
@@ -158,7 +161,7 @@
     </section>
     <footer>
       <div class='container'>
-        <div>
+        <!-- <div>
           <p>
             <a class="vmware" target="_blank" href="http://www.vmware.com">VMware, Inc.</a>
           </p>
@@ -167,7 +170,7 @@
             2020
             VMware, Inc. All Rights Reserved.
           </p>
-        </div>
+        </div> -->
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
