Revise documentation link and add installation and how-to-use videos

--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1, user-scalable=0' name='viewport'>
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <!-- <title>Crest&trade; by VMware&reg;</title> -->
     <title>Crest - An Automated Accessibility Testing Tool</title>
-    <!-- <link href='favicon.png' rel='shortcut icon'>
-    <link href='favicon.ico' rel='icon' type='image/ico'> -->
     <link href="assets/css/all.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
@@ -20,28 +15,14 @@
       <div class='container' style="justify-content: flex-end; display: flex;">
         <div id="skip"><a href="#maincontent">Skip to Main Content</a></div>
         <div class='row' style="width: 50%;">
-          <!-- <div > -->
-            <!-- class='brand-container' -->
-            <!-- <a class="brand" href="https://amit80007.github.io/COVID-19/">
-              <h1>
-              Crest
-            </h1>
-            </a> -->
-            <!-- <div class='by-vmware'>
-              by VMware, Inc.
-            </div> -->
-          <!-- </div> -->
           <div class="content">
           <nav style="width: 100%; font-size: 13px;">
             <a class="menu-actuator" href="#"><i class='ion-navicon'></i>
             Menu
             </a>
-            <!-- class='nav-collapse'  -->
             <div style="align-content: right;">
               <div class='container'>
                 <div class='row'>
-                  <!-- <a href="#what-is-crest">What is Crest</a> -->
-                  <!-- <a href="#getting-crest">Getting Crest</a> -->
                   <a alt="link to currently supports section" href="#currently-supports">Currently Supports</a>
                   <a alt="link to getting started section" href="#started">Getting Started</a>
                   <a alt="link to support section" href="#support">Support</a>
@@ -60,7 +41,6 @@
       <div class='container'>
         <div class="row">
           <div class="col-sm-6" style="margin: auto; text-align: center;">
-            <!-- <h2 id="vmware-crest" style="font-size: 40px;">Crest</h2> -->
             <main id="maincontent"></main>
             <h1><img alt="Crest Logo" src="assets/img/crest_logo.png" /></h1>
             <p style="font-size: 20px;">Automated Accessibility Testing Tool</p>
@@ -83,14 +63,13 @@
           <div class="content">
             <h2 id="currently-supports">Currently Supports</h2>&nbsp;
             <p>
-              <a alt="Keyboard Focus Indicator API reference page" title="Keyboard Focus Indicator" href="" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="" src="assets/img/Focus_indicator.png" /><span>Keyboard Focus Indicator</span>
+              <a alt="Keyboard Focus Indicator API reference page" title="Keyboard Focus Indicator" href="https://developer.vmware.com/apis/crest/latest/crest/api/perceivable/keyboard-focus-indicator/post/" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="" src="assets/img/Focus_indicator.png" /><span>Keyboard Focus Indicator</span>
               </a>
-              <a alt="Closed Captioning and Transcript API reference page" title="Closed Captioning and Transcript" href="" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="" src="assets/img/cc-transcript.png" /><span>Closed Captioning and Transcript</span>
+              <a alt="Closed Captioning and Transcript API reference page" title="Closed Captioning and Transcript" href="https://developer.vmware.com/apis/crest/latest/crest/api/perceivable/cc-transcript/post/" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="" src="assets/img/cc-transcript.png" /><span>Closed Captioning and Transcript</span>
               </a>
-              <a alt="Heading Analysis API reference page" title="Heading Analysis" href="" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="" src="assets/img/heading-analysis.png" /><span>Heading Analysis</span>
+              <a alt="Heading Analysis API reference page" title="Heading Analysis" href="https://developer.vmware.com/apis/crest/latest/crest/api/operable/heading-analysis/post/" style="font-size: 13px; text-align: center; color: #6db33f;"><img alt="" src="assets/img/heading-analysis.png" /><span>Heading Analysis</span>
               </a>
             </p>
-            <p style="font-size: 13px; text-align: center;"><span style="color: black; font-weight: bold;">Note:</span> The API reference documentation link will be enabled soon.</p>
       </div>
       </div>
     </div>
@@ -100,7 +79,13 @@
       <div class='row'>
         <div class="content">
           <h2 id="started">Getting Started</h2>&nbsp;
-          <p style="font-size: 13px;">Getting started with Crest in 5 minutes by following the instructions provided in the <a alt="Link to getting started section of ReadMe file" href="https://github.com/vmware/crest#getting-started">Readme File</a>.</p>
+          <p style="font-size: 13px;">Getting started with Crest in 5 minutes by following the instructions provided on the <a alt="Link to getting started section" href="https://developer.vmware.com/apis/crest/latest/">Landing page</a>.</p>
+          <h3>Installation</h3>
+          &nbsp;&nbsp;<p style="font-size: 13px;" >The following installation video shows you how to set up Crest step by step.</p>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<video width="500px" alt="Installation video" height="300px" controls="controls"/> <source src="assets/videos/Installation-Video.mp4" type="video/mp4"> </video> 
+          <h3>How to use</h3>&nbsp;
+          &nbsp;&nbsp;<p style="font-size: 13px;" >The video below shows you how to use Crest.</p>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<video width="500px" height="300px" alt="How to use video"  controls="controls"/> <source src="assets/videos/How-to-use video.mp4" type="video/mp4"> </video> 
         </div>
       </div>
     </div>
@@ -114,7 +99,6 @@
             <p>Crest is released as open source software and comes with no commercial support.</p>
             <p>But since we want to ensure success and recognize that Crest consumers might fall into a range of roles - from developers that are steeped in the conventions of open-source to customers that are more accustomed to VMware commercial offerings, we offer several methods of engaging with the Crest team and community.</p>
             <p>For the Crest community, feel free to join our <a alt= "Link to join crest slack channel" href="https://join.slack.com/t/crest-axz6070/shared_invite/zt-q4qom3p2-7FqwoIg2yffUzlpEE7_bcA" target="_blank">Slack channel </a></p>
-            <!-- <p>For more general user questions, visit the Crest user forum in our <a href="" target="_blank">Crest VMware Community(TBD)</a>.</p> -->
 
           </div>
         </div>
@@ -128,7 +112,7 @@
             <p>
               <a alt="Sheri Byrne Haber's Github profile" title="Sheri Byrne Haber" href="https://github.com/sheribyrne"><img alt="Sheri Byrne Haber" src="https://avatars.githubusercontent.com/u/47125418?v=4" />
               </a>
-              <a alt="Amit Garg's Github profile" title="Amit Garg" href="https://github.com/gargam17"><img alt="Amit Garg" src="https://avatars.githubusercontent.com/u/82112579?v=4" />
+              <a alt="Amit Garg's Github profile" title="Amit Garg" href="https://github.com/garg-amit"><img alt="Amit Garg" src="https://avatars.githubusercontent.com/u/82112579?v=4" />
               </a>
               <a alt="Joyce Oshita's Github profile" title="Joyce Oshita" href="https://github.com/ojoyce"><img alt="Joyce Oshita" src="https://avatars.githubusercontent.com/u/57046849?v=4" />
               </a>
@@ -161,16 +145,6 @@
     </section>
     <footer>
       <div class='container'>
-        <!-- <div>
-          <p>
-            <a class="vmware" target="_blank" href="http://www.vmware.com">VMware, Inc.</a>
-          </p>
-          <p>
-            &copy;
-            2020
-            VMware, Inc. All Rights Reserved.
-          </p>
-        </div> -->
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
